# teme2itrs

./: CMakeLists.txt  LICENSE  README.md  main.cpp  teme2itrs.cpp  teme2itrs.h
